# shenan

./: .gitignore  AGENTS.md  CONTRIBUTING.MD  Cargo.toml  README.md  SPEC.md  install.sh
.github/workflows/: ci.yml  deploy-relay.yml  release.yml
cli/: Cargo.toml
cli/src/: dotenv.rs  fanout.rs  github.rs  identity.rs  main.rs  session.rs  storage.rs
cli/src/commands/: config.rs  init.rs  mod.rs  receive.rs  send.rs  trust.rs
docs/history/: relay_spec_notes.md
install/: install.sh
proto/: Cargo.toml
proto/src/: channel.rs  error.rs  lib.rs  payload.rs  ssh.rs  wire.rs
proto/src/crypto/: aead.rs  ed25519.rs  kdf.rs  mod.rs  x25519.rs
relay/: Cargo.toml
relay/src/: admission.rs  auth.rs  cleanup.rs  config.rs  connection.rs  github.rs  lib.rs  main.rs  pipe.rs  ratelimit.rs  server.rs  state.rs
relay/tests/: integration.rs
website/: index.html
