[package]
name = "shenan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Shenan CLI — securely share secrets using SSH keys"

[dependencies]
shenan-proto = { path = "../proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
ssh-key = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
futures-util = "0.3"
atty = "0.2"
