[package]
name = "shenan-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Shenan protocol shared types and cryptography"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
curve25519-dalek = { workspace = true }
ssh-key = { workspace = true }
