[package]
name = "shenan-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-only"
description = "Shenan protocol relay server"

[dependencies]
shenan-proto = { path = "../proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
ssh-key = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = "0.3"
